--- a/README
+++ b/README
@@ -158,7 +158,7 @@ The build dependencies of glslsandbox are:
 - Python 2.6 or greater (also works with Python 3.x)
 - Development files for an OpenGL ES 2.0 and EGL library
 - One of the following native window library: X11, Vivante/libGAL,
-  Raspberry Pi
+  Raspberry Pi, Wayland EGL
 
   Compiling glslsandbox-player should be straightforward if all
 dependencies are present since it's an autotools package (aka
@@ -168,7 +168,7 @@ windowing library for your system.
   The configure script takes an option to select the native windowing
 system:
 
-  --with-native-gfx   Define the native gfx backend: x11(default),vivfb,rpi
+  --with-native-gfx   Define the native gfx backend: x11(default),vivfb,rpi,wl
 
   For example, compiling for using the the Vivante frame buffer native
 windowing support, use "./configure --with-native-gfx=vivfb".
@@ -550,7 +550,8 @@ window. Emulating a 'vmware' will workaround the issue (i.e. "qemu-kvm
 -vga vmware").
 
   Thanks to Sébastien Fagard and Vincent Stehlé for all their
-suggestions and interesting discussions. Many thanks to
+suggestions and interesting discussions.  Thanks to Marouen Ghodhbane
+for the initial Wayland EGL support.  Many thanks to
 http://glslsandbox.com/ authors and all its contributors.
 
 This glslsandbox-player code is distributed under the 2 clause BSD
